bitfields/tests/compile_error_cases/errors/bitflag_unsupported_type.stderr
error: The bitflag attribute must have an unsigned integer type as its first argument, 'i32' is unsupported.
 --> tests/compile_error_cases/errors/bitflag_unsupported_type.rs:3:11
  |
3 | #[bitflag(i32)]
  |           ^^^
